# sensor-manager

./: CMakeLists.txt  README.md
data/: data.json
include/: Sensor.h  SensorManager.h
src/: Sensor.cpp  SensorManager.cpp  main.cpp
